# CSR_AI_SERVICES

./: .env.example  main.py  pyproject.toml
app/: main.py
app/agents/csr_agent/: agent.py  converstaion_flow.py
app/ai/: Together_AI_client.py  gemini_client.py  groq_client.py  service.py
app/api/campaigns/: campaigns_service.py  router.py  schemas.py
app/api/csr/: csr_service.py  router.py  schemas.py
app/api/ngo_agent/: router.py  schemas.py
app/api/ngo_matching/: router.py  schemas.py
app/config/: settings.py  supabase_client.py
app/core/: config.py
app/modules/check_ngo_service/: router.py  schema.py  services.py
app/modules/generate_campaigns/: prompts.py  router.py  schema.py  services.py
app/modules/selected_camapigns/: router.py  schema.py  service.py
app/modules/selected_campaigns/: router.py  schema.py  service.py
app/prompts/: csr_prompts.py
app/services/: ngo_agent.py  ngo_matcher.py
app/shared/clients/: groq_client.py  supabase_client.py
app/shared/embeddings/: embedding.py  query_maker.py  sentence_transformer.py
app/shared/utils/: json_parser.py
app/tests/: test_RAG.py  test_selected_campaign_router.py  test_selected_campaign_service.py
docs/: api.md  architecture.md  database.md
