[project]
name = "csr-ai-services"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "google-genai>=1.66.0",
    "groq>=1.1.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "together>=2.4.0",
]
