[project]
name = "csr-ai-services"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "google-genai>=1.66.0",
    "groq>=1.1.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "sentence-transformers>=5.3.0",
    "supabase>=2.28.2",
    "together>=2.4.0",
    "uvicorn>=0.41.0",
]
[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
[tool.pytest.ini_options]
pythonpath = ["."]